--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 
 ######## exploration
-add_executable(exp_tremaux src/exp_tremaux.cpp  include/graph.cpp  )
+add_executable(exp_tremaux src/exp_tremaux.cpp  include/graph.cpp include/graph_distance.cpp  )
 
 target_link_libraries(exp_tremaux
    ${catkin_LIBRARIES}
